// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> accepts implicit and explicit items 1`] = `
<Select
  className=""
  items={
    Array [
      "a",
      "b",
      Object {
        "value": "c",
      },
      "d",
      Object {
        "label": "E",
        "value": "e",
      },
      "f",
    ]
  }
  onChange={[Function]}
  placeholder="Select ..."
  value={null}
>
  <div
    className="css-7c9av6 "
  >
    <div
      onTouchStart={[Function]}
    >
      <span
        className="undefined "
      >
        Select ...
      </span>
      <span
        className="css-jf1dde"
      >
        ▾
      </span>
    </div>
    <div
      className="css-182i7wq"
    >
      <SelectItem
        className=""
        label="a"
        onSelect={[Function]}
        selected={null}
        value="a"
      >
        <div
          className="css-fisw11 "
          onTouchEnd={[Function]}
        >
          a
        </div>
      </SelectItem>
      <SelectItem
        className=""
        label="b"
        onSelect={[Function]}
        selected={null}
        value="b"
      >
        <div
          className="css-fisw11 "
          onTouchEnd={[Function]}
        >
          b
        </div>
      </SelectItem>
      <SelectItem
        className=""
        label="c"
        onSelect={[Function]}
        selected={null}
        value="c"
      >
        <div
          className="css-fisw11 "
          onTouchEnd={[Function]}
        >
          c
        </div>
      </SelectItem>
      <SelectItem
        className=""
        label="d"
        onSelect={[Function]}
        selected={null}
        value="d"
      >
        <div
          className="css-fisw11 "
          onTouchEnd={[Function]}
        >
          d
        </div>
      </SelectItem>
      <SelectItem
        className=""
        label="E"
        onSelect={[Function]}
        selected={null}
        value="e"
      >
        <div
          className="css-fisw11 "
          onTouchEnd={[Function]}
        >
          E
        </div>
      </SelectItem>
      <SelectItem
        className=""
        label="f"
        onSelect={[Function]}
        selected={null}
        value="f"
      >
        <div
          className="css-fisw11 "
          onTouchEnd={[Function]}
        >
          f
        </div>
      </SelectItem>
    </div>
  </div>
</Select>
`;

exports[`<Select /> renders with implicit items (closed) 1`] = `
<Select
  className=""
  items={
    Array [
      "a",
      "b",
      "c",
      "d",
      "e",
      "f",
    ]
  }
  onChange={[Function]}
  placeholder="Select ..."
  value={null}
>
  <div
    className="css-7c9av6 "
  >
    <div
      onTouchStart={[Function]}
    >
      <span
        className="undefined "
      >
        Select ...
      </span>
      <span
        className="css-jf1dde"
      >
        ▾
      </span>
    </div>
  </div>
</Select>
`;

exports[`<Select /> renders with implicit items (opened) 1`] = `
<Select
  className=""
  items={
    Array [
      "a",
      "b",
      "c",
      "d",
      "e",
      "f",
    ]
  }
  onChange={[Function]}
  placeholder="Select ..."
  value={null}
>
  <div
    className="css-7c9av6 "
  >
    <div
      onTouchStart={[Function]}
    >
      <span
        className="undefined "
      >
        Select ...
      </span>
      <span
        className="css-jf1dde"
      >
        ▾
      </span>
    </div>
    <div
      className="css-182i7wq"
    >
      <SelectItem
        className=""
        label="a"
        onSelect={[Function]}
        selected={null}
        value="a"
      >
        <div
          className="css-fisw11 "
          onTouchEnd={[Function]}
        >
          a
        </div>
      </SelectItem>
      <SelectItem
        className=""
        label="b"
        onSelect={[Function]}
        selected={null}
        value="b"
      >
        <div
          className="css-fisw11 "
          onTouchEnd={[Function]}
        >
          b
        </div>
      </SelectItem>
      <SelectItem
        className=""
        label="c"
        onSelect={[Function]}
        selected={null}
        value="c"
      >
        <div
          className="css-fisw11 "
          onTouchEnd={[Function]}
        >
          c
        </div>
      </SelectItem>
      <SelectItem
        className=""
        label="d"
        onSelect={[Function]}
        selected={null}
        value="d"
      >
        <div
          className="css-fisw11 "
          onTouchEnd={[Function]}
        >
          d
        </div>
      </SelectItem>
      <SelectItem
        className=""
        label="e"
        onSelect={[Function]}
        selected={null}
        value="e"
      >
        <div
          className="css-fisw11 "
          onTouchEnd={[Function]}
        >
          e
        </div>
      </SelectItem>
      <SelectItem
        className=""
        label="f"
        onSelect={[Function]}
        selected={null}
        value="f"
      >
        <div
          className="css-fisw11 "
          onTouchEnd={[Function]}
        >
          f
        </div>
      </SelectItem>
    </div>
  </div>
</Select>
`;

exports[`<Select /> renders without items 1`] = `
<Select
  className=""
  items={Array []}
  onChange={[Function]}
  placeholder="Select ..."
  value={null}
>
  <div
    className="css-7c9av6 "
  >
    <div
      onTouchStart={[Function]}
    >
      <span
        className="undefined "
      >
        Select ...
      </span>
      <span
        className="css-jf1dde"
      >
        ▾
      </span>
    </div>
    <div
      className="css-182i7wq"
    />
  </div>
</Select>
`;

exports[`<Select /> triggers callback on change 1`] = `
<Select
  className=""
  items={
    Array [
      "a",
      "b",
      "c",
      "d",
      "e",
      "f",
    ]
  }
  onChange={[Function]}
  placeholder="Select ..."
  value={null}
>
  <div
    className="css-7c9av6 "
  >
    <div
      onTouchStart={[Function]}
    >
      <span
        className="undefined "
      >
        Select ...
      </span>
      <span
        className="css-jf1dde"
      >
        ▾
      </span>
    </div>
    <div
      className="css-182i7wq"
    >
      <SelectItem
        className=""
        label="a"
        onSelect={[Function]}
        selected={null}
        value="a"
      >
        <div
          className="css-fisw11 "
          onTouchEnd={[Function]}
        >
          a
        </div>
      </SelectItem>
      <SelectItem
        className=""
        label="b"
        onSelect={[Function]}
        selected={null}
        value="b"
      >
        <div
          className="css-fisw11 "
          onTouchEnd={[Function]}
        >
          b
        </div>
      </SelectItem>
      <SelectItem
        className=""
        label="c"
        onSelect={[Function]}
        selected={null}
        value="c"
      >
        <div
          className="css-fisw11 "
          onTouchEnd={[Function]}
        >
          c
        </div>
      </SelectItem>
      <SelectItem
        className=""
        label="d"
        onSelect={[Function]}
        selected={null}
        value="d"
      >
        <div
          className="css-fisw11 "
          onTouchEnd={[Function]}
        >
          d
        </div>
      </SelectItem>
      <SelectItem
        className=""
        label="e"
        onSelect={[Function]}
        selected={null}
        value="e"
      >
        <div
          className="css-fisw11 "
          onTouchEnd={[Function]}
        >
          e
        </div>
      </SelectItem>
      <SelectItem
        className=""
        label="f"
        onSelect={[Function]}
        selected={null}
        value="f"
      >
        <div
          className="css-fisw11 "
          onTouchEnd={[Function]}
        >
          f
        </div>
      </SelectItem>
    </div>
  </div>
</Select>
`;
